Tweaked readme for setting up tests